# ircord-server-tui

./: .gitignore  CMakeLists.txt  README.md
include/ircord/tui/: admin_protocol.hpp  admin_socket_client.hpp  admin_socket_listener.hpp  admin_tui.hpp  bugreport_view.hpp  log_view.hpp  settings_view.hpp  tui_log_sink.hpp  user_view.hpp
src/: admin_protocol.cpp  admin_socket_client.cpp  admin_socket_listener.cpp  admin_tui.cpp  bugreport_view.cpp  log_view.cpp  main.cpp  settings_view.cpp  user_view.cpp
tests/: test_protocol.cpp
